--- a/setup.cfg
+++ b/setup.cfg
@@ -1,20 +1,20 @@
 [compile_catalog]
-directory = Presentations/locale
-domain = Presentations
+directory = presentations/locale
+domain = presentations
 statistics = true
 
 [extract_messages]
 add_comments = TRANSLATORS:
-output_file = Presentations/locale/Presentations.pot
+output_file = presentations/locale/presentations.pot
 width = 80
 
 [init_catalog]
-domain = Presentations
-input_file = Presentations/locale/Presentations.pot
-output_dir = Presentations/locale
+domain = presentations
+input_file = presentations/locale/presentations.pot
+output_dir = presentations/locale
 
 [update_catalog]
-domain = Presentations
-input_file = Presentations/locale/Presentations.pot
-output_dir = Presentations/locale
+domain = presentations
+input_file = presentations/locale/presentations.pot
+output_dir = presentations/locale
 previous = true
