--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,2 @@
 include *.txt *.ini *.cfg *.rst *.json
-recursive-include presentations *.ico *.png *.css *.gif *.jpg *.txt *.js *.html *.xml
+recursive-include presentations *.ico *.png *.gif *.jpg *.txt *.css *.js *.html *.xml *.plim *.md *.eot *.svg *.ttf *.woff
